[package]
name = "encode_rs_fs"
version = "0.1.3"
edition = "2021"
description = "Read and Write files with encoding_rs."
readme = "README.md"
repository = "https://github.com/johnbrandborg/encode_rs_fs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.30"
